# hayaku-ike

./: Cargo.toml  README.md
assets/: speedup.service
assets/service/: hayaku-ike.service
src/: booster.rs  cli.rs  config.rs  helpers.rs  icons.rs  installer.rs  logger.rs  main.rs  notifier.rs  tray.rs
tools/: install.rs
